<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".actividades.RegisterActivity">

  <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <ImageView
        android:id="@+id/logo"
        android:layout_width="302dp"
        android:layout_height="108dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/descp_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avispro" />

      <EditText
        android:id="@+id/label_usuario"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

      <EditText
        android:id="@+id/label_contrasena"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_usuario" />

      <EditText
        android:id="@+id/label_alias"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_alias"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_contrasena" />

      <Button
        android:id="@+id/boton_accept"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:hint="@string/boton_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_alias" />

      <Button
        android:id="@+id/boton_cancel"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/boton_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boton_accept" />

    </android.support.constraint.ConstraintLayout>
  </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>