<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:padding="20dp"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/dialog_combat_join"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dp"
    android:text="@string/dialog_combat_join_text" />

  <LinearLayout
    android:id="@+id/select_pj"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="true">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:text="@string/dialog_combat_join_pj"/>

    <Spinner
      android:id="@+id/pj_list"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="true">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:text="@string/dialog_combat_join_speed"/>

    <EditText
      android:id="@+id/speed_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="number" />

  </LinearLayout>

</LinearLayout>