<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".actividades.LoginActivity">

  <ImageView
    android:id="@+id/logo"
    android:layout_width="302dp"
    android:layout_height="108dp"
    android:layout_marginTop="45dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/avispro" />

  <EditText
    android:id="@+id/label_usuario"
    android:layout_width="302dp"
    android:layout_height="45dp"
    android:layout_marginTop="30dp"
    android:hint="@string/label_usuario"
    android:inputType="textPersonName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/logo" />

  <EditText
    android:id="@+id/label_contrasena"
    android:layout_width="302dp"
    android:layout_height="45dp"
    android:layout_marginTop="10dp"
    android:hint="@string/label_contrasena"
    android:inputType="textPassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/label_usuario" />

  <Button
    android:id="@+id/boton_login"
    android:layout_width="302dp"
    android:layout_height="45dp"
    android:layout_marginTop="50dp"
    android:hint="@string/boton_login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/label_contrasena" />

  <Button
    android:id="@+id/boton_register"
    android:layout_width="302dp"
    android:layout_height="45dp"
    android:layout_marginTop="10dp"
    android:hint="@string/boton_register"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/boton_login" />

  <com.google.android.gms.common.SignInButton
    android:layout_width="170dp"
    android:layout_height="45dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/boton_register" />

</android.support.constraint.ConstraintLayout>